--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,7 +17,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   kernel:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
             matrix:
                 version: [6.13]
@@ -41,7 +41,7 @@ jobs:
           
   rootfs:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     needs: kernel
     strategy:
             matrix:
